# radar

./: .env.example  .gitignore  DIRECTORY_STRUCTURE.md  INTEGRATION_TEST_RESULTS_MT5.md  PROJECT_GUIDELINES.md  README.md  SETUP_SUMMARY.md  TEST_RESULTS_WATCHLIST.md  docker-compose.yml  pyproject.toml  requirements.txt  src_structure.txt  test_watchlist.py  test_watchlist_integration_mt5.py
db/migrations/: alembic.ini  env.py
documentacion/adr/: 001_MT_config.md  002_WL_config.md  ADR-001-architecture-style.md  ADR-001-watchlist.md  ADR-001_IMPLEMENTATION_SUMMARY.md  ADR-003 - API Keys  ADR_002_MT5_Config.md  IMPLEMENTATION_SUMMARY.md  TEST_RESULTS.md
documentacion/architecture/: MT5_gestion.md  software-architecture.md
documentacion/runbooks/: local-setup.md
documentacion/temporales/: Project_Design_Radar.md  Project_Requirements_Radar.md  Radar_Trading_Task_Plan.md
scripts/: run_tests.bat  setup.bat
src/: __init__.py  main.py
src/application/asset_catalog/services/: asset_catalog_service.py  asset_classifier.py
src/application/configuration/services/: mt5_account_service.py
src/domain/: __init__.py
src/domain/entities/: asset.py  asset_audit_log.py  asset_sync_log.py  mt5_account.py  mt5_account_audit_log.py  mt5_account_validation_log.py
src/domain/interfaces/: i_asset_catalog_repository.py  i_mt5_account_repository.py  i_mt5_gateway.py
src/infrastructure/config/: settings.py
src/infrastructure/logging/: structured_logger.py
src/infrastructure/mt5/adapter/: mt5_gateway.py
src/infrastructure/mt5/dto/: mt5_symbol_info.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/models/: asset_model.py  mt5_account_model.py
src/infrastructure/persistence/repositories/: asset_catalog_repository.py  mt5_account_repository.py
src/presentation/api/routes/: assets.py  mt5_accounts.py
src/presentation/api/schemas/: asset_schema.py  mt5_account_schema.py
tests/unit/application/: test_asset.py  test_asset_catalog_service.py  test_mt5_account.py  test_mt5_account_service.py
